cmake_minimum_required(VERSION 3.6)
project(cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(CALCULATOR_SOURCE_FILES calculator/main.cpp calculator/Token.cpp calculator/Token.h calculator/main.cpp calculator/Lexer.cpp calculator/Lexer.h)
set(TEMPLATE_SOURCE_FILES template/main.cpp)
set(HELLOWORLD_SOURCE_FILES aizu/hello_world.cpp)
set(XCUBIC_SOURCE_FILES aizu/x_cubic.cpp)
set(RECTANGLE_SOURCE_FILES aizu/rectangle.cpp)
set(QQ_SOURCE_FILES aizu/qq.cpp)
set(TOP3_SOURCE_FILES aizu/top3.cpp)
set(INSERTION_SORT_SOURCE_FILES aizu/insertion_sort.cpp)
set(GCD_SOURCE_FILES aizu/gcd.cpp)
set(PRIME1_SOURCE_FILES aizu/prime1.cpp)
set(MAXIMUM_PROFIT_SOURCE_FILES aizu/maximum_profit.cpp)
set(BUBBLE_SORT_FILES aizu/bubble_sort.cpp)
set(SELECTION_SORT_FILES aizu/selection_sort.cpp.cpp)
add_executable(calculator ${CALCULATOR_SOURCE_FILES})
add_executable(template ${TEMPLATE_SOURCE_FILES})
add_executable(hello_world ${HELLOWORLD_SOURCE_FILES})
add_executable(xcubic ${XCUBIC_SOURCE_FILES})
add_executable(rectangle ${RECTANGLE_SOURCE_FILES})
add_executable(qq ${QQ_SOURCE_FILES})
add_executable(top3 ${TOP3_SOURCE_FILES})
add_executable(insertion_sort ${INSERTION_SORT_SOURCE_FILES})
add_executable(gcd ${GCD_SOURCE_FILES})
add_executable(prime1 ${PRIME1_SOURCE_FILES})
add_executable(maximum_profit ${MAXIMUM_PROFIT_SOURCE_FILES})
add_executable(bubble_sort ${BUBBLE_SORT_FILES})
add_executable(selection_sort ${SELECTION_SORT_FILES})
